# home-depot-scraper

./: .gitignore  README.md  pyproject.toml
.github/agents/: my-agent.agent.md
.github/workflows/: tests.yml
hd_scraper/: __init__.py  __main__.py  block_detector.py  bootstrap.py  config.py  csv_writer.py  endpoint_discovery.py  models.py  pdp.py  plp.py  report.py  scraper.py
hd_scraper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  test_csv_writer.py  test_models.py  test_scraping.py
