[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hd_scraper"
version = "0.1.0"
description = "Home Depot product scraper"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.40.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "tenacity>=8.2.0",
]

[project.scripts]
hd-scraper = "hd_scraper.__main__:main"

[tool.setuptools.packages]
find = {}
